--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,3 +1,24 @@
 <view>
-  <button bindtap="goUpload">点我一下上传个图片唉</button>
-</view> 
+  <!-- 有时间再搞这个移动的 -->
+  <!-- <button id="userBtn" type="primary" lang="zh_CN" bindclick="clickButton" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" style="{{'left:' + moveL + 'px;top:' + moveT + 'px;'}}"> -->
+  <view class="fixed-area">
+    <view class="op-area {{collapse ? 'op-area_collapse' : ''}}">
+      <view class="op-area_content {{collapse ? 'op-area_content-show' : 'op-area_content-hide'}}">
+        <view class="op-title">亲爱的索菲娅小姐姐:</view>
+        <view class="op-item">
+          你是想要在衣橱中放新东西吗？
+          <view class="click-here" bindtap="addClothes">点击这里>></view>
+        </view>
+        <view class="op-item">
+          你是想要添加新的衣服组合吗？
+          <view class="click-here" bindtap="addCombinations">点击这里>></view>
+        </view>
+      </view>
+    </view>
+    <button id="userBtn" type="primary" lang="zh_CN" bindtap="clickButton" class="{{collapse ? 'rotate-btn' : ''}}">
+      <view class="add-item"></view>
+      <view class="add-item rotate-item"></view>
+    </button>
+  </view>
+
+</view>
