侧边菜单组件

--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -4,6 +4,7 @@
   bottom: 120rpx;
   width: 200px;
   height: 200px;
+  z-index: 998;
 }
 
 #userBtn {
@@ -123,17 +124,4 @@
   height: 600rpx;
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 60%);
   color: #fff;
-}
-
-.menu {
-  position: absolute;
-  top: 50rpx;
-  left: 20rpx;
-  display: flex;
-  align-items: center;
-}
-
-.menu-icon {
-  width: 50rpx;
-  height: 50rpx;
 }
