--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -5,3 +5,33 @@
   align-items: center;
   box-sizing: border-box;
 } 
+
+/** common **/
+.logo {
+  position: absolute;
+  z-index: 2;
+  left: 50%;
+  bottom: 200rpx;
+  width: 160rpx;
+  height: 160rpx;
+  margin-left: -80rpx;
+  border-radius: 50%;
+  animation: sway 10s ease-in-out infinite;
+  opacity: .95;
+  overflow: hidden;
+}
+
+.logo-img {
+  width: 120rpx;
+  height: 120rpx;
+}
+
+@keyframes sway{
+  0% {transform: translate3d(0,20rpx,0) rotate(-15deg); }
+  17% {transform: translate3d(0,0rpx,0) rotate(25deg); }
+  34% {transform: translate3d(0,-20rpx,0) rotate(-20deg); }
+  50% {transform: translate3d(0,-10rpx,0) rotate(15deg); }
+  67% {transform: translate3d(0,10rpx,0) rotate(-25deg); }
+  84% {transform: translate3d(0,15rpx,0) rotate(15deg); }
+  100% {transform: translate3d(0,20rpx,0) rotate(-15deg); }
+}
