--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,9 +1,7 @@
 <view>
   <image src="/assets/images/home-bg.jpg" mode="aspectFill" class="head-img">
   </image>
-  <view class="menu">
-    <image src="/assets/images/home-menu.png" mode="aspectFill" class="menu-icon"></image>
-  </view>
+  <b-menu indicate="index"/>
   <!-- 有时间再搞这个移动的 -->
   <!-- <button id="userBtn" type="primary" lang="zh_CN" bindclick="clickButton" bindtouchstart="touchS" bindtouchmove="touchM" bindtouchend="touchE" style="{{'left:' + moveL + 'px;top:' + moveT + 'px;'}}"> -->
   <view class="fixed-area">
