--- a/miniprogram/pages/core/upload/index.wxml
+++ b/miniprogram/pages/core/upload/index.wxml
@@ -1,3 +1,2 @@
 <!--pages/core/upload/index.wxml-->
-<text>上传个图片嘛</text>
-<button bindtap="chooseImg">上传</button>
+<view class='title'>{{title}}</view>
