--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,4 +1,15 @@
 /**app.wxss**/
+.title.page-title {
+  height: 110rpx;
+  background: linear-gradient(to left,rgba(199, 199, 231, 0.7), rgba(103, 216, 144, 0.7) 50%, rgba(246, 236, 224, .7));
+  color: #fff;
+  font-size: 32rpx;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  padding-bottom: 10rpx;
+}
+
 .container {
   display: flex;
   flex-direction: column;
