--- a/miniprogram/pages/search/index.wxss
+++ b/miniprogram/pages/search/index.wxss
@@ -1,1 +1,9 @@
 /* pages/search/index.wxss */
+.no-search {
+  position: fixed;
+  background: rgba(47, 47, 47, 0.6);
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+}
