--- a/miniprogram/pages/search/index.wxml
+++ b/miniprogram/pages/search/index.wxml
@@ -1,16 +1,17 @@
 <!--pages/search/index.wxml-->
 <view class='title page-title'>很智能的哦</view>
 <view class="" wx:if="{{hasSearch}}">
-  <view wx:if="{{searchList && searchList.length}}" class="search-wrap">
-    <view wx:if="{{season.value}}">
-      为您生成{{season.label}}季宜穿服装
+  <view class="clothes clothes_wrap" wx:for="{{clothesList}}" wx:for-item="clothes" wx:key="{{clothes._id}}">
+    <view class="clothes_title">
+      {{clothes.name}} <text class="price_text">{{clothes.price}}</text>  
     </view>
-    <view class='' wx:else>
-      为您找到下面这些：
+    <view class="clothes_des">{{clothes.description}}</view>
+    <view class="clothes_tag">
+      <text class="tag_text">{{clothes.type}}</text>
     </view>
-  </view>
-  <view class="no-result" wx:else>
-
+    <view class="clothes_pictures" wx:for="{{clothes.pictures}}" wx:key="{{index}}">
+      <image src="{{item}}" mode="aspectFit" class="clothes_pic_item"></image>
+    </view>
   </view>
 </view>
 <view wx:else class="no-search">
