--- a/miniprogram/pages/core/upload/index.wxss
+++ b/miniprogram/pages/core/upload/index.wxss
@@ -1,8 +1,11 @@
 /* pages/core/upload/index.wxss */
+.content {
+  background: #fff;
+  margin-top: 20rpx;
+}
 
 /* form */
 .form-wrap {
-  border-top: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
   padding: 0 20rpx;
 }
@@ -33,21 +36,23 @@
 }
 
 .up-header {
+  margin-top: 20rpx;
   font-size: 32rpx;
   color: #666;
-  height: 42rpx;
-  line-height: 42rpx;
-  margin: 20rpx;
-  padding-left: 20rpx;
+  height: 90rpx;
+  line-height: 90rpx;
+  padding-left: 30rpx;
   position: relative;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .up-header::before {
   position: absolute;
   content: '';
   width: 10rpx;
-  height: 100%;
-  top: 0;
+  height: 50rpx;
+  top: 50%;
+  transform: translateY(-50%);
   left: 0;
   background: rgba(103, 216, 144, 1);
 }
